--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="primaryDarkColor">#000000</color>
+
+    <color name="colorBottomSheetDialog">#0F0F0F</color>
 </resources>
