--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <!--?xml version="1.0" encoding="UTF-8"?-->
 <resources>
-    <color name="primaryColor">#1976d2</color>
-    <color name="primaryLightColor">#63a4ff</color>
+    <color name="primaryColor">#1976D2</color>
+    <color name="primaryLightColor">#63A4FF</color>
     <color name="primaryDarkColor">#004ba0</color>
-    <color name="primaryTextColor">#ffffff</color>
+    <color name="primaryTextColor">#FFFFFF</color>
     <color name="accentColor">#E1E2E1</color>
 
-    <color name="whiteColor">#ffffff</color>
+    <color name="whiteColor">#FFFFFF</color>
     <color name="blackColor">#000000</color>
+
+    <color name="colorBottomSheetDialog">#1976d2</color>
 </resources>
