--- a/app/src/main/res/layout-land/fragment_forecast.xml
+++ b/app/src/main/res/layout-land/fragment_forecast.xml
@@ -49,7 +49,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="8dp"
                 android:clipToPadding="false"
-                app:layoutManager="com.stone.vega.library.VegaLayoutManager"
+                app:layoutManager=".utils.layoutmanager.VegaLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
