--- a/app/src/main/res/layout-night/fragment_forecast.xml
+++ b/app/src/main/res/layout-night/fragment_forecast.xml
@@ -42,7 +42,7 @@
                android:layout_marginEnd="1dp"
                android:layout_marginBottom="1dp"
                android:clipToPadding="false"
-               app:layoutManager="com.stone.vega.library.VegaLayoutManager"
+               app:layoutManager=".utils.layoutmanager.VegaLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
