--- a/app/src/main/res/layout-land-night/fragment_forecast.xml
+++ b/app/src/main/res/layout-land-night/fragment_forecast.xml
@@ -52,7 +52,7 @@
                 android:layout_height="0dp"
                 android:layout_marginTop="8dp"
                 android:clipToPadding="false"
-                app:layoutManager=".utils.layoutmanager.VegaLayoutManager"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="@+id/guideline2"
