update project to android 33 and fix it's issues

--- a/app/src/main/res/layout-night/fragment_home.xml
+++ b/app/src/main/res/layout-night/fragment_home.xml
@@ -164,31 +164,34 @@
                         android:id="@+id/imageView12"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:tint="@color/primaryLightColor"
+                        app:tint="@color/primaryLightColor"
                         app:layout_constraintEnd_toStartOf="@+id/imageView11"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_humidity" />
+                        app:srcCompat="@drawable/ic_humidity"
+                        android:contentDescription="TODO" />
 
                     <ImageView
                         android:id="@+id/imageView11"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:tint="@color/primaryLightColor"
+                        app:tint="@color/primaryLightColor"
                         app:layout_constraintEnd_toStartOf="@+id/imageView10"
                         app:layout_constraintStart_toEndOf="@id/imageView12"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_pressure" />
+                        app:srcCompat="@drawable/ic_pressure"
+                        android:contentDescription="TODO" />
 
                     <ImageView
                         android:id="@+id/imageView10"
                         android:layout_width="wrap_content"
                         android:layout_height="30dp"
-                        android:tint="@color/primaryLightColor"
+                        app:tint="@color/primaryLightColor"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@id/imageView11"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:srcCompat="@drawable/ic_wind" />
+                        app:srcCompat="@drawable/ic_wind"
+                        android:contentDescription="TODO" />
 
                     <TextView
                         android:id="@+id/textView10"
