--- a/app/src/main/res/layout/fragment_search_detail.xml
+++ b/app/src/main/res/layout/fragment_search_detail.xml
@@ -36,7 +36,7 @@
                 android:backgroundTint="@color/primaryTextColor"
                 app:layout_anchor="@id/cardView"
                 app:layout_anchorGravity="center_horizontal|top"
-                />
+                android:contentDescription="button" />
 
             <LinearLayout
                 android:id="@+id/cardView"
